--- a/masktest.html
+++ b/masktest.html
@@ -3,8 +3,8 @@
 <head>
     <style>
         .mask1 {
-            -webkit-mask-image: url("images/mask1.svg");
-            mask-image: url("images/mask1.svg");
+            -webkit-mask-image: url("images/mask1.png");
+            mask-image: url("images/mask1.png");
             mask-repeat: no-repeat;
         }
     </style>
