--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ overlords!</p>
         </div>
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
-            <div class="u-effect-hover-zoom u-gallery-item">
+            <div class="u-effect-hover-zoom u-gallery-item mask1">
               <div class="u-back-slide">
                 <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie1.png">
               </div>
