--- a/index.html
+++ b/index.html
@@ -80,62 +80,66 @@
       </div>
     </section>
     <section class="u-align-left u-clearfix u-container-align-left u-image u-shading u-section-2" id="block-2" data-image-width="1280" data-image-height="853">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">Sling into it!</h1>
-        <div class="u-border-8 u-border-white u-container-style u-group u-radius u-shading u-shape-round u-group-1">
-          <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <p class="u-text u-text-body-alt-color u-text-default u-text-2"> Riftshot is an 3D Action Platformer inspired by
- games such as Super Mario Odyssey and A Hat in Time, with an emphasis 
-on movement, combat, and exploration! Use 
-your trusty Slingshot to zip your way through dense levels, scuffle with
- sinister scoundrels, and steal your world back from corporate 
-overlords!</p>
-          </div>
+        <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+            <h1 class="u-text u-text-default u-text-1" style="position:relative; top:80px; right:27px; color:#ff00ff; line-height:0px;text-align:center;">SLING INTO IT!</h1>
+            <h1 class="u-text u-text-default u-text-1" style="position:relative; top:60px; right:23px; color:#00ffff; line-height:0px;text-align:center;">SLING INTO IT!</h1>
+            <h1 class="u-text u-text-body-alt-color u-text-default u-text-1" style="right:25px;">SLING INTO IT!</h1>
+            <div class="u-border-8 u-border-white u-container-style u-group u-radius u-shading u-shape-round u-group-1">
+                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                    <p class="u-text u-text-body-alt-color u-text-default u-text-2">
+                        Riftshot is an 3D Action Platformer inspired by
+                        games such as Super Mario Odyssey and A Hat in Time, with an emphasis
+                        on movement, combat, and exploration! Use
+                        your trusty Slingshot to zip your way through dense levels, scuffle with
+                        sinister scoundrels, and steal your world back from corporate
+                        overlords!
+                    </p>
+                </div>
+            </div>
+            <div class="u-rotation-parent u-rotation-parent-1">
+                <img class="u-image u-image-default u-image-1" style="outline: 4px solid white" src="images/firstImage.jpeg" alt="" data-image-width="1280" data-image-height="853">
+            </div>
+            <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
+                <div class="u-gallery-inner u-gallery-inner-1" >
+                    <div class="u-effect-hover-zoom u-gallery-item" style="-webkit-mask-image:url(images/mask1.png)">
+                        <div class="u-back-slide">
+                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie1.png">
+                        </div>
+                        <div class="u-over-slide u-shading u-over-slide-1"></div>
+                    </div>
+                    <div class="u-effect-hover-zoom u-gallery-item">
+                        <div class="u-back-slide">
+                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie2.png">
+                        </div>
+                        <div class="u-over-slide u-shading u-over-slide-2"></div>
+                    </div>
+                    <div class="u-effect-hover-zoom u-gallery-item">
+                        <div class="u-back-slide">
+                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie3.png">
+                        </div>
+                        <div class="u-over-slide u-shading u-over-slide-3"></div>
+                    </div>
+                    <div class="u-effect-hover-zoom u-gallery-item">
+                        <div class="u-back-slide">
+                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie4.png">
+                        </div>
+                        <div class="u-over-slide u-shading u-over-slide-4"></div>
+                    </div>
+                    <div class="u-effect-hover-zoom u-gallery-item">
+                        <div class="u-back-slide">
+                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie5.png">
+                        </div>
+                        <div class="u-over-slide u-shading u-over-slide-5"></div>
+                    </div>
+                    <div class="u-effect-hover-zoom u-gallery-item">
+                        <div class="u-back-slide">
+                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie6.png">
+                        </div>
+                        <div class="u-over-slide u-shading u-over-slide-6"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="u-rotation-parent u-rotation-parent-1">
-          <img class="u-image u-image-default u-image-1" src="images/firstImage.jpeg" alt="" data-image-width="1280" data-image-height="853">
-        </div>
-        <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
-          <div class="u-gallery-inner u-gallery-inner-1">
-            <div class="u-effect-hover-zoom u-gallery-item mask1">
-              <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie1.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-1"></div>
-            </div>
-            <div class="u-effect-hover-zoom u-gallery-item">
-              <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie2.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-2"></div>
-            </div>
-            <div class="u-effect-hover-zoom u-gallery-item">
-              <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie3.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-3"></div>
-            </div>
-            <div class="u-effect-hover-zoom u-gallery-item">
-              <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie4.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-4"></div>
-            </div>
-            <div class="u-effect-hover-zoom u-gallery-item">
-              <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie5.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-5"></div>
-            </div>
-            <div class="u-effect-hover-zoom u-gallery-item">
-              <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie6.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-6"></div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
     <section class="u-clearfix u-image u-parallax u-section-3" id="block-3">
       <div class="u-clearfix u-sheet u-sheet-1">
