--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
                 <div class="u-gallery-inner u-gallery-inner-1" >
-                    <div class="u-effect-hover-zoom u-gallery-item" style="-webkit-mask-image:url(images/mask1.png); mask-size: 247px;">
+                    <div class="u-effect-hover-zoom u-gallery-item" style="-webkit-mask-image:url(images/mask1.png); mask-origin: padding-box; mask-size: 50%;">
                         <div class="u-back-slide">
                             <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie1.png">
                         </div>
