--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="u-gallery-inner u-gallery-inner-1" >
                     <div class="u-effect-hover-zoom u-gallery-item">
                         <div class="u-back-slide">
-                            <img class="u-back-image u-expanded"  style="-webkit-mask-image:url(images/mask1.png); mask-origin: padding-box; mask-size:50%" src="images/GameplayImages/Screenie1.png">
+                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie1.png">
                         </div>
                         <div class="u-over-slide u-shading u-over-slide-1"></div>
                     </div>
