--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="u-rotation-parent u-rotation-parent-1">
-                <img class="u-image u-image-default u-image-1" style=" -webkit-mask-image:url(images/mask1.png); mask-origin: padding-box; mask-size:50%" src="images/firstImage.jpeg" alt="" data-image-width="1280" data-image-height="853">
+                <img class="u-image u-image-default u-image-1"  src="images/firstImage.jpeg" alt="" data-image-width="1280" data-image-height="853">
             </div>
             <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
                 <div class="u-gallery-inner u-gallery-inner-1" >
