--- a/Characters.html
+++ b/Characters.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Who&amp;apos;s Gonna Win?​, The Good Guys, THE BAD GUYS">
+    <meta name="keywords" content="Who&amp;apos;s Asking?​, The Good Guys, THE BAD GUYS">
     <meta name="description" content="">
     <title>Characters</title>
     <link rel="stylesheet" href="stylesheet.css" media="screen">
@@ -64,7 +64,7 @@
       </div></header>
     <section class="u-clearfix u-image u-parallax u-section-1" id="block-4" data-image-width="2000" data-image-height="1333">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-align-center u-text u-text-body-alt-color u-text-1">Who's Gonna Win? </h1>
+        <h1 class="u-align-center u-text u-text-body-alt-color u-text-1">Who's Asking? </h1>
       </div>
     </section>
     <section class="u-clearfix u-container-align-center u-image u-shading u-section-2" id="block-5">
