--- a/index.html
+++ b/index.html
@@ -97,43 +97,43 @@
                 </div>
             </div>
             <div class="u-rotation-parent u-rotation-parent-1">
-                <img class="u-image u-image-default u-image-1" style=" -webkit-mask-image:url(images/mask1.png); mask-origin: padding-box; mask-size:50%" src="images/firstImage.jpeg" alt="" data-image-width="1280" data-image-height="853">
+                <img class="u-image u-image-default u-image-1" style=" -webkit-mask-image: url(images/firstImageMask.png); mask-origin: padding-box; mask-size: cover; mask-repeat: no-repeat;" src="images/firstImage.jpeg" alt="" data-image-width="1280" data-image-height="853">
             </div>
             <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
                 <div class="u-gallery-inner u-gallery-inner-1" >
                     <div class="u-effect-hover-zoom u-gallery-item">
                         <div class="u-back-slide">
-                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie1.png">
+                            <img class="u-back-image u-expanded" style=" -webkit-mask-image: url(images/mask1.png); mask-origin: padding-box; mask-size: contain; mask-repeat: no-repeat;" src="images/GameplayImages/Screenie1.png">
                         </div>
                         <div class="u-over-slide u-shading u-over-slide-1"></div>
                     </div>
                     <div class="u-effect-hover-zoom u-gallery-item">
                         <div class="u-back-slide">
-                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie2.png">
+                            <img class="u-back-image u-expanded" style=" -webkit-mask-image: url(images/mask3m.png); mask-origin: padding-box; mask-size: contain; mask-repeat: no-repeat;" src="images/GameplayImages/Screenie2.png">
                         </div>
                         <div class="u-over-slide u-shading u-over-slide-2"></div>
                     </div>
                     <div class="u-effect-hover-zoom u-gallery-item">
                         <div class="u-back-slide">
-                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie3.png">
+                            <img class="u-back-image u-expanded" style=" -webkit-mask-image: url(images/mask3.png); mask-origin: padding-box; mask-size: contain; mask-repeat: no-repeat;" src="images/GameplayImages/Screenie3.png">
                         </div>
                         <div class="u-over-slide u-shading u-over-slide-3"></div>
                     </div>
                     <div class="u-effect-hover-zoom u-gallery-item">
                         <div class="u-back-slide">
-                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie4.png">
+                            <img class="u-back-image u-expanded" style=" -webkit-mask-image: url(images/mask2m.png); mask-origin: padding-box; mask-size: contain; mask-repeat: no-repeat;" src="images/GameplayImages/Screenie4.png">
                         </div>
                         <div class="u-over-slide u-shading u-over-slide-4"></div>
                     </div>
                     <div class="u-effect-hover-zoom u-gallery-item">
                         <div class="u-back-slide">
-                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie5.png">
+                            <img class="u-back-image u-expanded" style=" -webkit-mask-image: url(images/mask1.png); mask-origin: padding-box; mask-size: contain; mask-repeat: no-repeat;" src="images/GameplayImages/Screenie5.png">
                         </div>
                         <div class="u-over-slide u-shading u-over-slide-5"></div>
                     </div>
                     <div class="u-effect-hover-zoom u-gallery-item">
                         <div class="u-back-slide">
-                            <img class="u-back-image u-expanded" src="images/GameplayImages/Screenie6.png">
+                            <img class="u-back-image u-expanded" style=" -webkit-mask-image: url(images/mask3m.png); mask-origin: padding-box; mask-size: contain; mask-repeat: no-repeat;" src="images/GameplayImages/Screenie6.png">
                         </div>
                         <div class="u-over-slide u-shading u-over-slide-6"></div>
                     </div>
