--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <div class="u-effect-hover-zoom u-gallery-item">
                         <div class="u-back-slide">
-                            <img class="u-back-image u-expanded" style=" -webkit-mask-image: url(images/mask3.png); mask-origin: padding-box; mask-size: contain; mask-repeat: no-repeat;" src="images/GameplayImages/Screenie3.png">
+                            <img class="u-back-image u-expanded" style=" -webkit-mask-image: url(images/mask3m.png); mask-origin: padding-box; mask-size: contain; mask-repeat: no-repeat;" src="images/GameplayImages/Screenie3.png">
                         </div>
                         <div class="u-over-slide u-shading u-over-slide-3"></div>
                     </div>
