July 3rd Update

--- a/Story.html
+++ b/Story.html
@@ -66,8 +66,8 @@
         <h1 class="u-align-center u-text u-text-body-alt-color u-text-default u-title u-text-1">WHAT THE HECK IS GOING ON?</h1>
         <div class="u-container-style u-group u-palette-1-base u-radius u-shape-round u-group-1">
           <div class="u-container-layout u-container-layout-1">
-              <p class="u-text u-text-body-alt-color u-text-default u-text-2">Stargrove Island, an Island of many wonders, least of all being it's abilty to wander the ocean's waves.
-              Its unique climates and attractions have brought all sorts of people to its shores. From the streets of the Balesling Borough, to the 
+              <p class="u-text u-text-body-alt-color u-text-default u-text-2">Stargrove Island, an Island of many wonders, least of all being it's mysterious yearly aurora.
+              Its unique climate and attractions have brought all sorts of people to its shores. From the streets of the Balesling Borough, to the 
               mysterious Reever's Ruin, everyone has something to do on Stargrove Island. Including a certain shady businessman...</p>
           </div>
         </div>
@@ -75,16 +75,17 @@
         <img class="u-image u-image-round u-radius u-image-2" src="images/StoryImages/storyImage1.jpeg" alt="" data-image-width="1280" data-image-height="853">
         <div class="u-container-style u-group u-palette-1-base u-radius u-shape-round u-group-2">
           <div class="u-container-layout u-container-layout-2">
-            <p class="u-text u-text-body-alt-color u-text-default u-text-3">After suffering many defeats at the hands of Olive, Somno, as always, was searching desperately for some foil-proof plan to take over the world. 
-              When checking the ocean for any power sources, he picked up an unusual power signature coming from the island. Rifling through his archelogical archives, he dug up the mystery of the caretakers,
-              with a legend of a long buried destructive force. With nothing else to do, he quickly set up an operation to seize this force for himself.</p>
+            <p class="u-text u-text-body-alt-color u-text-default u-text-3">After suffering many defeats at the hands of regulatory bodies, public protest, and worst of all, annoying young adults, Somno, as 
+              always, was searching desperately for some foil-proof plan to take over the world. When checking the ocean for any new artifacts he could use, he picked up an unusual power signature coming from
+              the island. Rifling through his archelogical archives, he dug up the mystery of the caretakers, with a legend of a sporatic yet powerful force. With nothing else to do, he quickly set up an operation
+              to seize this force for himself.</p>
           </div>
         </div>
         <div class="u-container-style u-group u-palette-1-base u-radius u-shape-round u-group-3">
           <div class="u-container-layout u-container-layout-3">
-            <p class="u-text u-text-body-alt-color u-text-default u-text-4">Unfortunately, Olive and her crew were also investigating this island, before Somno swooped in and stole their highly experimental Rift Catalyst,
-              a crystal of immense spacial power! With this mysterious force and the Rift Catalyst, Somno's dominion could threaten the entire world! Only the power of the Island's Aurora Shards
-             can nullify Somno's corruptive influence, and save the Catalyst! Go Olive! The Island is depending on you!</p>
+            <p class="u-text u-text-body-alt-color u-text-default u-text-4">Meanwhile, at the same time, the yearly aurora festival is well on its way! And three particular women got their hands on some
+              tickets. All would be well and good, except you know who crashed the festival, and is tearing the island apart in a mad dash for power! Only one person has been able to stop him, so go, Olive! 
+              The Island is depending on you!</p>
           </div>
         </div>
         <img class="u-image u-image-round u-radius u-image-3" src="images/StoryImages/storyImage2.jpeg" alt="" data-image-width="1280" data-image-height="853">
